unpackaged/main/default/objects/Account/fields/RICSC_ProductOfInterests__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ProductOfInterests__c</fullName>
        <description>Multi-selection of all products (coming from SAP) the client has a known interest in, coming from SAP.</description>
        <label>Product Of Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accessories Belt</fullName>
                </value>
                <value>
                    <fullName>Accessories Card holder</fullName>
                </value>
                <value>
                    <fullName>Accessories Clock</fullName>
                </value>
                <value>
                    <fullName>Accessories Cufflinks</fullName>
                </value>
                <value>
                    <fullName>Accessories Handbags &amp; Leather</fullName>
                </value>
                <value>
                    <fullName>Accessories Key ring</fullName>
                </value>
                <value>
                    <fullName>Accessories Lighter</fullName>
                </value>
                <value>
                    <fullName>Accessories Money clip</fullName>
                </value>
                <value>
                    <fullName>Accessories Other</fullName>
                </value>
                <value>
                    <fullName>Accessories Pens</fullName>
                </value>
                <value>
                    <fullName>Accessories Prescript Eyewear</fullName>
                </value>
                <value>
                    <fullName>Accessories Scarf</fullName>
                </value>
                <value>
                    <fullName>Accessories Small Leather</fullName>
                </value>
                <value>
                    <fullName>Accessories Sunglasses</fullName>
                </value>
                <value>
                    <fullName>AMVOX</fullName>
                </value>
                <value>
                    <fullName>Atmos</fullName>
                </value>
                <value>
                    <fullName>Bridal Ballerine</fullName>
                </value>
                <value>
                    <fullName>Bridal Cartier D’Amour</fullName>
                </value>
                <value>
                    <fullName>Bridal C De Cartier</fullName>
                </value>
                <value>
                    <fullName>Bridal Classic Wedding Bands</fullName>
                </value>
                <value>
                    <fullName>Bridal Declaration</fullName>
                </value>
                <value>
                    <fullName>Bridal Honeymoon</fullName>
                </value>
                <value>
                    <fullName>Bridal LOVE</fullName>
                </value>
                <value>
                    <fullName>Bridal Other</fullName>
                </value>
                <value>
                    <fullName>Bridal Solitaire 1895</fullName>
                </value>
                <value>
                    <fullName>Bridal Trinity</fullName>
                </value>
                <value>
                    <fullName>Duomètre</fullName>
                </value>
                <value>
                    <fullName>Extraordinary</fullName>
                </value>
                <value>
                    <fullName>Fragrances Baiser Volé</fullName>
                </value>
                <value>
                    <fullName>Fragrances Déclaration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>