unpackaged/main/default/objects/Account/fields/RICSC_RecomputeFlagsPropagation__c.field-meta.xml
<CustomField>
        <fullName>RICSC_RecomputeFlagsPropagation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate whether there is a pending job to recompute VIP, HJ, COO flags on the account's related objects</description>
        <label>Recompute Flags Propagation</label>
        <type>Checkbox</type>
    </CustomField>