unpackaged/main/default/objects/Account/fields/RICSC_ReferenceBoutique__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ReferenceBoutique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is populated with the SF ID correspondent to the respective SAP boutique coming from SAP as a consequence of a calculation</description>
        <label>Reference Boutique</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Reference Boutique)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </CustomField>