unpackaged/main/default/objects/Account/fields/RICSC_ReferenceMarket__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ReferenceMarket__c</fullName>
        <description>Text field to indicate the reference market of the client, calculated based on SF rules</description>
        <label>Reference Market</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>