unpackaged/main/default/objects/Account/fields/RICSC_ReferenceRegion__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ReferenceRegion__c</fullName>
        <description>Text field to indicate the reference market of the client, calculated based on SF rules</description>
        <label>Reference Region</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>