unpackaged/main/default/objects/Account/fields/RICSC_ReferenceRegionMarket__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ReferenceRegionMarket__c</fullName>
        <description>Formula field to group the Reference Region and Reference Market  for compact layout</description>
        <formula>IF(RICSC_ReferenceRegion__c = RICSC_ReferenceMarket__c , RICSC_ReferenceMarket__c , IF(RICSC_ReferenceRegion__c ='', '- / '+ RICSC_ReferenceMarket__c,
IF(RICSC_ReferenceMarket__c ='', RICSC_ReferenceRegion__c + ' / -',  RICSC_ReferenceRegion__c + ' / ' +RICSC_ReferenceMarket__c ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference Region / Market</label>
        <type>Text</type>
    </CustomField>