unpackaged/main/default/objects/Account/fields/RICSC_ReferenceSA__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ReferenceSA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is populated with the SF ID correspondent to the respective SAP SA coming from SAP as a consequence of a calculation</description>
        <label>Reference SA</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Reference SA)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </CustomField>