unpackaged/main/default/objects/Account/fields/RICSC_ResidencyType__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ResidencyType__c</fullName>
        <description>Field to indicate the type of the residency</description>
        <label>Residency Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Mono-Residency</fullName>
                </value>
                <value>
                    <fullName>Multi-Residency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>