unpackaged/main/default/objects/Account/fields/RICSC_ResidentNonResident__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ResidentNonResident__c</fullName>
        <description>Calculated segmentation based on the travel habits of a client</description>
        <label>Resident/Non Resident</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Non-Resident</fullName>
                </value>
                <value>
                    <fullName>Resident</fullName>
                </value>
                <value>
                    <fullName>Traveller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>