unpackaged/main/default/objects/Account/fields/RICSC_SAPAuthorisationGroup__c.field-meta.xml
<CustomField>
        <fullName>RICSC_SAPAuthorisationGroup__c</fullName>
        <description>Picklist field with value coming from SAP to indicate visibility rights in SAP</description>
        <label>SAP Authorisation Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RICSC_SAPAuthorisationGroup</valueSetName>
        </valueSet>
    </CustomField>