unpackaged/main/default/objects/Account/fields/RICSC_SourceCRM__c.field-meta.xml
<CustomField>
        <fullName>RICSC_SourceCRM__c</fullName>
        <description>Technical Field -  to indicate which CRM is the owner of the customer</description>
        <label>Source CRM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Legacy_0050010</fullName>
                </value>
                <value>
                    <fullName>Legacy_0050050</fullName>
                </value>
                <value>
                    <fullName>Legacy_0050090</fullName>
                </value>
                <value>
                    <fullName>Legacy_0143090</fullName>
                </value>
                <value>
                    <fullName>Legacy_0153080</fullName>
                </value>
                <value>
                    <fullName>Legacy_0155000</fullName>
                </value>
                <value>
                    <fullName>Legacy_0163070</fullName>
                </value>
                <value>
                    <fullName>Legacy_0163170</fullName>
                </value>
                <value>
                    <fullName>Legacy_0163270</fullName>
                </value>
                <value>
                    <fullName>Legacy_0163370</fullName>
                </value>
                <value>
                    <fullName>Legacy_0174000</fullName>
                </value>
                <value>
                    <fullName>Legacy_0174010</fullName>
                </value>
                <value>
                    <fullName>Legacy_0174020</fullName>
                </value>
                <value>
                    <fullName>Legacy_0174030</fullName>
                </value>
                <value>
                    <fullName>Legacy_0186000</fullName>
                </value>
                <value>
                    <fullName>SAP_CRM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>