unpackaged/main/default/objects/Account/fields/RICSC_SpotNotes__c.field-meta.xml
<CustomField>
        <fullName>RICSC_SpotNotes__c</fullName>
        <description>Additional notes coming from SAP CRM. This field stores a short text (50 char) popping up every time we display this customer</description>
        <label>Spot Notes</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>