unpackaged/main/default/objects/Account/fields/RICSC_SWSEID__c.field-meta.xml
<CustomField>
        <fullName>RICSC_SWSEID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Technical Field -  to indicate the customer unique SWSE Id</description>
        <externalId>true</externalId>
        <label>SWSE ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>