unpackaged/main/default/objects/Account/fields/RICSC_TaxId2__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TaxId2__c</fullName>
        <description>Additional Tax ID field from SAP</description>
        <label>Tax Id 2</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>