unpackaged/main/default/objects/Account/fields/RICSC_TaxId__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TaxId__c</fullName>
        <description>Tax ID field from SAP</description>
        <label>Tax Id</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>