unpackaged/main/default/objects/Account/fields/RICSC_TaxIdCategory_2__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TaxIdCategory_2__c</fullName>
        <description>Additional Tax Category field</description>
        <label>Tax Id Category 2</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>