unpackaged/main/default/objects/Account/fields/RICSC_TaxIdCategory__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TaxIdCategory__c</fullName>
        <description>Tax Category</description>
        <label>Tax Id Category</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>