unpackaged/main/default/objects/Account/fields/RICSC_Timezone__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Timezone__c</fullName>
        <description>Timezone customer is in</description>
        <label>Timezone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>