unpackaged/main/default/objects/Account/fields/RICSC_TnSalesFY0__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TnSalesFY0__c</fullName>
        <label>Tn Sales FY-0</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </CustomField>