unpackaged/main/default/objects/Account/fields/RICSC_Top1Boutique__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Top1Boutique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field retrieves the Top 1 Boutique based on rules defined in Salesforce</description>
        <label>Top 1 Boutique</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Top 1 Boutique)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </CustomField>