unpackaged/main/default/objects/Account/fields/RICSC_Top1Market__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Top1Market__c</fullName>
        <description>Calculated based on the 1st highest rate Turnover*Frequency in the market</description>
        <label>Top 1 Market</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>