unpackaged/main/default/objects/Account/fields/RICSC_Top1SA__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Top1SA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field retrieves the top sales assistant based on turnover and frequency</description>
        <label>Top 1 SA</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </CustomField>