unpackaged/main/default/objects/Account/fields/RICSC_Top2Boutique__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Top2Boutique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field retrieves the Top 2 Boutique based on rules defined in Salesforce</description>
        <label>Top 2 Boutique</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Top 2 Boutique)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </CustomField>