unpackaged/main/default/objects/Account/fields/RICSC_Top2Market__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Top2Market__c</fullName>
        <label>Top 2 Market</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>