unpackaged/main/default/objects/Account/fields/RICSC_Top2SA__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Top2SA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field retrieves the 2nd highest rated sales assistant based on turnover and frequency</description>
        <label>Top 2 SA</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Top 2 SA)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </CustomField>