unpackaged/main/default/objects/Account/fields/RICSC_Top3Boutique__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Top3Boutique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field retrieves the Top 3 Boutique based on rules defined in Salesforce</description>
        <label>Top 3 Boutique</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Top 3 Boutique)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </CustomField>