unpackaged/main/default/objects/Account/fields/RICSC_Top3Market__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Top3Market__c</fullName>
        <description>Calculated based on the 3rd highest rate Turnover*Frequency in the market</description>
        <label>Top 3 Market</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>