unpackaged/main/default/objects/Account/fields/RICSC_Top3SA__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Top3SA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field retrieves the 3rd highest rated sales assistant based on turnover and frequency</description>
        <label>Top 3 SA</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Top 3 SA)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </CustomField>