unpackaged/main/default/objects/Account/fields/RICSC_TotalNumberOfRepairs__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TotalNumberOfRepairs__c</fullName>
        <description>Calculated number field of all the repairs (of all products)</description>
        <label>Total Number Of Repairs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>