unpackaged/main/default/objects/Account/fields/RICSC_TotalNumberOfSales__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TotalNumberOfSales__c</fullName>
        <description>Calculated number field of all sales transactions</description>
        <label>Total Number Of Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>