unpackaged/main/default/objects/Account/fields/RICSC_TotalNumberOfTransactions__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TotalNumberOfTransactions__c</fullName>
        <description>Both (sales and services)</description>
        <formula>RICSC_TotalNumberOfRepairs__c +  RICSC_TotalNumberOfSales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number Of Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>