unpackaged/main/default/objects/Account/fields/RICSC_TotalTurnoverRepairs__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TotalTurnoverRepairs__c</fullName>
        <description>Total turnover of the repairs</description>
        <label>Total Turnover Repairs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>