unpackaged/main/default/objects/Account/fields/RICSC_TotalTurnoverSales__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TotalTurnoverSales__c</fullName>
        <description>Total turnover of the Sales</description>
        <label>Total Turnover Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>