unpackaged/main/default/objects/Account/fields/RICSC_TransactionChannelsSelected__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TransactionChannelsSelected__c</fullName>
        <description>channels that were selected from the related transactions</description>
        <label>Transaction Channels Selected</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Boutique</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>WeChat</fullName>
                    <isActive>false</isActive>
                    <label>WeChat</label>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>