unpackaged/main/default/objects/Account/fields/RICSC_Turnover__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Turnover__c</fullName>
        <description>Calculated field with sum of all customer purchases</description>
        <label>Turnover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>