unpackaged/main/default/objects/Account/fields/RICSC_UnsubscribeReason__c.field-meta.xml
<CustomField>
        <fullName>RICSC_UnsubscribeReason__c</fullName>
        <description>Reason customer unsubscribed</description>
        <label>UnsubscribeReason</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>