unpackaged/main/default/objects/Account/fields/RICSC_VCAFormerStar__c.field-meta.xml
<CustomField>
        <fullName>RICSC_VCAFormerStar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VCA Former Star</label>
        <type>Checkbox</type>
    </CustomField>