unpackaged/main/default/objects/Account/fields/RICSC_VIP__c.field-meta.xml
<CustomField>
        <fullName>RICSC_VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Client categorization based on perceived value</description>
        <label>VIP</label>
        <type>Checkbox</type>
    </CustomField>