unpackaged/main/default/objects/Account/fields/RICSC_VoiceContact__c.field-meta.xml
<CustomField>
        <fullName>RICSC_VoiceContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate whether this contact can be reached via voice correspondance (telephone calls)</description>
        <label>Voice Contact</label>
        <type>Checkbox</type>
    </CustomField>