unpackaged/main/default/objects/Account/fields/RICSC_WeddingDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_WeddingDate__c</fullName>
        <description>Date field to indicate the wedding date of the client</description>
        <label>Wedding Date</label>
        <type>Date</type>
    </CustomField>