unpackaged/main/default/objects/Account/listViews/All_Customers_JLC.listView-meta.xml
<ListView>
        <fullName>All_Customers_JLC</fullName>
        <columns>RICSC_GR__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>RICSC_Age__c</columns>
        <columns>RICSC_CountryOfOrigin__c</columns>
        <columns>RICSC_VIP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.RICSC_JaegerLeCoultre</value>
        </filters>
        <label>All Customers - JLC</label>
    </ListView>